# ets2-dynamic-interior-mod

./: .gitignore
core/: CMakeLists.txt  core.cpp
core/include/: patches.h  ui.h
core/src/: core.cpp  patches.cpp  ui.cpp
injector/: package.json
injector/src/: index.ts
injector/src/constants/: game.ts
injector/src/utils/: memory.ts
